--- a/client/src/components/LaunchItem.css
+++ b/client/src/components/LaunchItem.css
@@ -1,3 +1,25 @@
+@import url('https://fonts.googleapis.com/css?family=Roboto:300,400');
+
+* {
+  box-sizing: border-box;
+}
+
+body {
+  font-family: 'Roboto', sans-serif;
+  font-weight: 500;
+  overflow: hidden;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-weight: 500;
+}
+
+
 .btn-secondary {
   padding: 0.7rem 1rem;
   height: 2.7rem;
@@ -6,12 +28,13 @@
   border-radius: 2px;
   font-weight: 500;
   font-size: 1rem;
-  background: #f96816;
+  background: #ff0000be;
   color: #fff;
   text-decoration: none;
   cursor: pointer;
   text-align: center;
   transition: all 0.1s;
+  width: 60%;
 }
 
 .btn-secondary:hover {
